# my_swift_vio

./: .gitignore  .gitmodules  .linterconfig.yaml  CMakeLists.txt  README.md  TODO.md  TODO.txt  changelog-huai.txt  doxygen.config  package.xml
cfg/: Camera.cfg
cmake/: FindEigen.cmake
config/: LcdParams.yaml  config_Tsukuba.yaml  config_advio.yaml  config_calibration_6s+alpha.yaml  config_calibration_greg_s3.yaml  config_calibration_greg_s3_msckf2.yaml  config_fpga_p2_euroc.yaml  config_fpga_p2_euroc_dissertation.yaml  config_fpga_p2_euroc_eucm.yaml  config_parkinglot_greg_s3.yaml  config_parkinglot_jisun_s6.yaml  config_tum_rs_512_50_20.yaml  config_tum_rs_512_50_20_equidistant.yaml  config_tum_rs_512_50_20_inaccurate.yaml  config_tum_rs_512_50_20_radialtangential.yaml  config_tum_rs_640_50_20_equi.yaml  config_tum_rs_640_50_20_equi_inaccurate.yaml  config_tum_rs_640_50_20_radtan.yaml  config_tum_rs_640_50_20_radtan_inaccurate.yaml  config_tum_vi_50_20.yaml  config_tum_vi_50_20_msckf.yaml  config_tum_vi_512_50_20.yaml  config_tum_vi_512_50_20_eucm.yaml  config_tum_vi_512_50_20_inaccurate.yaml  config_ueye_artemis_20210314.yaml  greg-s3-calibration-agisoft.txt  lcd_params.yaml  rviz.rviz  rviz_mesh.rviz
config/smartphones/: config_honorv10.yaml  config_iphone6s.yaml
evaluation/: AlgoConfig.py  GroupPgoResults.py  OkvisConfigComposer.py  ResultsDirManager.py  RoscoreManager.py  RunOneVioMethod.py  VioConfigComposer.py  basalt_evaluation.py  convert_euroc_gt_csv.py  create_rosbags_for_advio.py  dataset_okvis_config.py  dataset_parameters.py  dataset_vio_config.py  dir_utility_functions.py  euroc_stasis_options.py  evo_wrap.py  extract_tum_vi_gt.py  extract_uzh_fpv_gt.py  find_transformation_in_kalibr_output.py  homebrew_options.py  kalibr_okvis_config.py  main_evaluation.py  main_okvis_config.py  main_vio_config.py  openvins_evaluation.py  parse_args.py  rosbag_utility_functions.py  rpg_eval_tool_wrap.py  sample_eval_options.py  smoke_test.py  tumrs_calib_options.py  tumvi_calib_options.py  unit_test.py  utility_functions.py  uzh_fpv_competition.py  visualize_tumvi_calib_result.py
evaluation/config/: eval_cfg_sim3.yaml  start_end_time.yaml
evaluation/ioutilities/: create_rosbags_for_advio.py  csv_to_txt.py  extract_tum_vi_gt.py  extract_uzh_fpv_gt.py
evaluation/test/: test_dir_utility_functions.py  test_okvis_config_composer.py  test_utility_functions.py  test_vio_config_composer.py
evaluation/tumvi/: OpenVinsIO.py  dataParams.py  mathUtils.py  visualize_tumvi_calib_result.py
include/eigen/: gtest.hpp  matrix_sqrt.hpp
include/feature_tracker/: FeatureTracker.h  FeatureTrail.h  TrackResultReader.h  TrailManager.h  feature_tracker.h  trail_manager.h
include/gtsam/: ImuFactorTestHelpers.h  ImuFrontEnd-definitions.h  ImuFrontEnd.h  ImuFrontEndParams.h  RiExtendedPose3.h  RiExtendedPose3Prior.h  RiImuFactor.h  RiProjectionFactorIDP.h  RiProjectionFactorIDPAnchor.h  RiSlidingWindowSmoother.hpp  RiSmartProjectionFactor.h  RiTransformPointJacobian.h  SlidingWindowSmoother.hpp  VioBackEndParams.h
include/io_wrap/: CameraPoseVisualization.h  CommonGflags.hpp  PgoPublisher.hpp  Player.hpp  PoseViewer.hpp  Publisher.hpp  RosParametersReader.hpp  StreamHelper.hpp  Subscriber.hpp  YamlParser.h
include/loop_closure/: GtsamWrap.hpp  LcdThirdPartyWrapper.h  LoopClosureDetector-definitions.h  LoopClosureDetector.h  LoopClosureDetectorParams.h  OrbLoopClosureMethod.hpp  YamlParser.h  gtsam-definitions.h
include/msckf/: BaseFilter.h  BoundedImuDeque.hpp  CamState.hpp  CameraRig.h  CameraSystemCreator.hpp  ConsistentEstimator.hpp  EpipolarJacobian.hpp  FeatureTriangulation.hpp  FilterHelper.hpp  GeneralEstimator.hpp  HybridFilter.hpp  HybridFrameAbsolutePoseSacProblem.hpp  HybridFrameNoncentralAbsoluteAdapter.hpp  HybridFrameRelativeAdapter.hpp  HybridFrameRelativePoseSacProblem.hpp  HybridFrameRotationOnlySacProblem.hpp  HybridFrontend.hpp  HybridVio.hpp  HybridVioParametersReader.hpp  ImuOdometry.h  ImuOdometryLegacy.hpp  ImuSimulator.h  InitialPVandStd.hpp  InvariantEKF.hpp  MSCKF2.hpp  MeasurementJacobianMacros.hpp  MockSmoother.hpp  MotionAndStructureStats.h  PointLandmark.hpp  PointLandmarkSimulationRS.hpp  PreconditionedEkfUpdater.h  RelativeMotionJacobian.hpp  SimulationFrontend.hpp  SimulationNView.h  SlidingWindowSmoother.hpp  StatAccumulator.h  TFVIO.hpp  TwoViewGeometry.hpp  TwoViewPair.hpp  VioEvaluationCallback.hpp  (+6 more)
include/okvis/: HybridFilter.hpp  HybridFrameAbsolutePoseSacProblem.hpp  HybridFrameNoncentralAbsoluteAdapter.hpp  HybridFrameRelativeAdapter.hpp  HybridFrameRelativePoseSacProblem.hpp  (+18 more)
launch/: convert_dataset.launch  okvis_node.launch  okvis_node_rosbag.launch  okvis_node_synchronous.launch  swift_vio_node.launch  swift_vio_node_rosbag.launch  swift_vio_node_synchronous.launch
sensor_calib/: CMakeLists.txt  README.md
sensor_calib/libsensor_calib/: CMakeLists.txt  TimeAndRotationCalibrator.cpp  TimeAndRotationCalibrator.h
sensor_calib/sensor_calib/: CMakeLists.txt  main.cpp
sensor_calib/sensor_calib-test/: CMakeLists.txt  TestTimeAndRotationCalibrator.cpp
src/: CPPLINT.cfg  CameraIntrinsicError.cpp  CameraIntrinsicParamBlock.cpp  HybridFilter.cpp  HybridFrameNoncentralAbsoluteAdapter.cpp  HybridFrameRelativeAdapter.cpp  HybridFrontend.cpp  HybridVio.cpp  HybridVioParametersReader.cpp  IMUOdometry.cpp  ImuSimulator.cpp  Player.cpp  PoseViewer.cpp  Publisher.cpp  RosParametersReader.cpp  Subscriber.cpp  TrackResultReader.cpp  VioFrameMatchingAlgorithm.cpp  camerarig.cpp  dataset_convertor.cpp  initialpvandstd.cpp  invoke_one_test.cpp  msckf2.cpp  okvis_node.cpp  preconditioned_ekf_updater.cpp  triangulate.cpp  triangulateFast.cpp
test/: BinaryOperators.cpp  MapKeyOrder.cpp  MockVioInterface.hpp  OpenCVDistortion.cpp  Sizeof.cpp  StdAccumulate.cpp  VirtualFunction.cpp  customized_terminate.cpp  customized_terminate.hpp  testEigenQR.cpp  testHybridFilter.cpp  testIMUOdometry.cpp  testOkvisTriangulateFast.cpp  testSE3Interpolation.cpp  testTriangulate.cpp  testVioDatasetPlayer.cpp  test_main.cpp  tracks_orbvo.txt
vocabulary/: README.md
(+417 files in other folders)
