<?xml version="1.0"?>
<package>
  <name>msckf</name>
  <version>1.1.3</version>
  <description>The msckf package</description>

  <maintainer email="s.leutenegger@imperial.ac.uk">Stefan Leutenegger</maintainer>
  <author>Stefan Leutenegger</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
 
  <build_depend>libgoogle-glog-dev</build_depend> 
  <build_depend>image_transport</build_depend> 

  <build_depend>gps_common</build_depend>
  <build_depend>pcl_ros</build_depend> 
  <build_depend>roscpp</build_depend> 
  <build_depend>rosconsole</build_depend> 
  <!-- <build_depend>rosbag</build_depend> -->
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>std_msgs</build_depend> -->
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <!-- <build_depend>tf</build_depend> -->
  <build_depend>vio_common</build_depend>
  
  <run_depend>libgoogle-glog-dev</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>pcl_ros</run_depend> 
  
  <run_depend>roscpp</run_depend>  
  <run_depend>rosconsole</run_depend>    
  <!-- <run_depend>rosbag</run_depend> -->
  <run_depend>sensor_msgs</run_depend> 
  <!-- <run_depend>std_msgs</run_depend> -->
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <!-- <run_depend>tf</run_depend> -->
  <run_depend>vio_common</run_depend>
  <run_depend>message_runtime</run_depend>


  <test_depend>rosunit</test_depend>

</package>
